boulder/boulder/tests/compile_fail/loop/while_ty.bo
# Mismatched types
# `u32`
# `Empty`
# (6:
fn while_ty() -> u32 {
    while False {
        break 7;
    }
}